objects/MMPJ_Ext_Vign_Societe_Contact__c.object
<CustomObject>
    <description>MMPJ Extranet Vigneron - used for both Cognac &amp; Champagne
This is a junction object between &quot;Société&quot; &amp; &quot;Contact&quot; objects</description>
    <fields>
        <fullName>MMPJ_Ext_Vign_Cle_Spirit_1__c</fullName>
        <externalId>true</externalId>
        <label>Clé Spirit 1</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Contact_Principal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Principal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Liste des sociétés</relationshipLabel>
        <relationshipName>SocietesContacts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Fonction__c</fullName>
        <label>Fonction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PROPRIETAIRE</fullName>
                </value>
                <value>
                    <fullName>GERANT</fullName>
                </value>
                <value>
                    <fullName>COGERANT</fullName>
                </value>
                <value>
                    <fullName>SALARIE</fullName>
                </value>
                <value>
                    <fullName>ADMIN</fullName>
                </value>
                <value>
                    <fullName>COURTIER</fullName>
                </value>
                <value>
                    <fullName>PRESIDENTSURV</fullName>
                </value>
                <value>
                    <fullName>PRESIDENT</fullName>
                </value>
                <value>
                    <fullName>DIRGD</fullName>
                </value>
                <value>
                    <fullName>COPROPRIETAIRE</fullName>
                </value>
                <value>
                    <fullName>PRESIDENTADM</fullName>
                </value>
                <value>
                    <fullName>PDG</fullName>
                </value>
                <value>
                    <fullName>COMMISSAIRE</fullName>
                </value>
                <value>
                    <fullName>NONSALARIE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_SocietContact_Segmentation__c</fullName>
        <label>Segmentation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Champagne</fullName>
                </value>
                <value>
                    <fullName>Cognac</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_SocieteContact_Id_Apport__c</fullName>
        <externalId>true</externalId>
        <label>Clé ID Apport</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Societe__c</fullName>
        <label>Société</label>
        <referenceTo>MMPJ_Ext_Vign_Societe__c</referenceTo>
        <relationshipLabel>Liste des contacts</relationshipLabel>
        <relationshipName>Societe_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Unicite__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unicité Contact Principal Société</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Espace_Personnel_MMPJetMoi__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Cocher cette case pour donner accès à l&apos;espace personnel MMPJetMoi à cet utilisateur</inlineHelpText>
        <label>Utilisateur Espace Personnel MMPJetMoi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Titre__c</fullName>
        <label>Titre</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Administrateur</fullName>
                </value>
                <value>
                    <fullName>Assistant(e)</fullName>
                </value>
                <value>
                    <fullName>Associé</fullName>
                    <isActive>false</isActive>
                    <label>Associé</label>
                </value>
                <value>
                    <fullName>Chef de Cave</fullName>
                </value>
                <value>
                    <fullName>Courtier</fullName>
                </value>
                <value>
                    <fullName>Directeur</fullName>
                </value>
                <value>
                    <fullName>Gérant</fullName>
                </value>
                <value>
                    <fullName>Membre de famille</fullName>
                </value>
                <value>
                    <fullName>Œnologue</fullName>
                    <isActive>false</isActive>
                    <label>Œnologue</label>
                </value>
                <value>
                    <fullName>Président</fullName>
                </value>
                <value>
                    <fullName>Responsable Appro</fullName>
                </value>
                <value>
                    <fullName>Responsable d&apos;exploitation</fullName>
                </value>
                <value>
                    <fullName>Salarié MPJ</fullName>
                </value>
                <value>
                    <fullName>Vice Président</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Société-Contact</label>
    <listViews>
        <fullName>MMPJ_Champagne</fullName>
        <columns>NAME</columns>
        <columns>MMPJ_Ext_Vign_Contact__c</columns>
        <columns>MMPJ_Ext_Vign_Societe__c</columns>
        <columns>MMPJ_Ext_Vign_Fonction__c</columns>
        <columns>MMPJ_Ext_Vign_Contact_Principal__c</columns>
        <columns>MMPJ_XRM_Espace_Personnel_MMPJetMoi__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MMPJ_Ext_Vign_SocietContact_Segmentation__c</field>
            <operation>equals</operation>
            <value>Champagne</value>
        </filters>
        <label>MMPJ_Champagne</label>
        <language>fr</language>
        <sharedTo>
            <group>MMPJ_Ext_Vign_Global_PG_Champagne</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MMPJ_Ext_Vign_Cognac</fullName>
        <columns>NAME</columns>
        <columns>MMPJ_Ext_Vign_Contact__c</columns>
        <columns>MMPJ_Ext_Vign_Societe__c</columns>
        <columns>MMPJ_Ext_Vign_Fonction__c</columns>
        <columns>MMPJ_Ext_Vign_Contact_Principal__c</columns>
        <columns>MMPJ_XRM_Espace_Personnel_MMPJetMoi__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>MMPJ_Ext_Vign_Cle_Spirit_1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MMPJ_Ext_Vign_SocietContact_Segmentation__c</field>
            <operation>equals</operation>
            <value>Cognac</value>
        </filters>
        <label>MMPJ_Ext_Vign_Cognac</label>
        <language>fr</language>
        <sharedTo>
            <group>MMPJ_Ext_Vign_Global_PG_Cognac</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Contact-{00000}</displayFormat>
        <label>Numero</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sociétés-Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>